--- a/pages/index.html
+++ b/pages/index.html
@@ -5,12 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>index</title>
-    <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bruno+Ace+SC&family=Roboto+Slab:wght@100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet"> -->
-    
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,300,0,0" />
   </head>
   <body>
     <%- include('./layout/header'); -%>
@@ -96,7 +91,6 @@
                 <!-- 預設圖片，通常是桌面版本 -->
                 <img src="../assets/images/home-section4-1.png" alt="DOUBLE A+">
               </picture>
-              <!-- <img src="../assets/images/home-section4-1.png" alt="DOUBLE A+"> -->
               <h3>DOUBLE A+</h3>
             </div>
           </li>
@@ -108,7 +102,6 @@
                 <!-- 預設圖片，通常是桌面版本 -->
                 <img src="../assets/images/home-section4-2.png" alt="DOUBLE A+">
               </picture>
-              <!-- <img src="../assets/images/home-section4-2.png" alt="YOUTH"> -->
               <h3>YOUTH</h3>
             </div>
           </li>
